Add generic signals/motors

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "buttplug": "^1.0.0",
     "core-js": "^3.6.5",
     "protobufjs": "^6.10.2",
+    "v-click-outside": "^3.1.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-drag-drop": "^1.1.4",
